Fixed the size of the menu container and applied better height/spacing between the links.

--- a/src/index.css
+++ b/src/index.css
@@ -166,11 +166,9 @@ h1.title {
   z-index: 900;
   top: -100%;
   background-color: rgba(0, 0, 0, 0.9);
-  height: 450px;
+  height: 350px;
   width: 100vw;
   transition: 300ms;
-  color: red;
-  box-shadow: 0 0 15px aqua;
   clip-path: polygon(50% 0%, 100% 0, 100% 60%, 60% 100%, 40% 100%, 0% 60%, 0 0);
 }
 
@@ -182,9 +180,9 @@ h1.title {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-top: 120px;
+  margin-top: 50px;
   padding: 0;
-  height: 200px;
+  height: 250px;
   justify-content: space-between;
   align-items: center;
 }
